--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "element-plus": "^2.10.6",
     "moment": "^2.30.1",
     "pinia": "^3.0.3",
     "vue": "^3.5.18",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue3-charts": "^1.1.33"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
